# tex2markdown

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: check_claimspy_parity.py
src/tex2markdown/: __init__.py  _cleanup.py  _figures.py  _legacy.py  _project.py  _renderer.py  _tables.py  api.py  cli.py  converter.py  exceptions.py
src/tex2markdown/cases/: __init__.py  cleanup.py  figures.py  source_selection.py  tabbing.py  tables.py
tests/: test_api.py  test_cli.py
tests/fixtures/: simple.tex
